--- a/NonConditional.tex
+++ b/NonConditional.tex
@@ -1,7 +1,7 @@
 \documentclass[Master.tex]{subfiles}
 \begin{document}
 
-\section{Sokoban example}
+\section{Sokoban example} \label{sec:nc:sokobanExample}
     \subfile{NonConditional/SokobanExample}
 
 \section{Learning effects}
