Fixed theorem bug

--- a/Master.tex
+++ b/Master.tex
@@ -18,9 +18,9 @@
 \makeatletter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
   \theoremstyle{definition}
-  \newtheorem{defn}{\protect\definitionname}
+  \newtheorem{definition}{Definition}
   \theoremstyle{plain}
-  \newtheorem{example}{Example}
+  \newtheorem{example}{Example}[section]
   \newtheorem{theorem}{Theorem}
   \newtheorem{invariant}{Invariant}
 \makeatother
