--- a/Master.tex
+++ b/Master.tex
@@ -22,6 +22,7 @@
   \theoremstyle{plain}
   \newtheorem{example}{Example}[section]
   \newtheorem{theorem}{Theorem}
+  \newtheorem{proposition}{Proposition}
   \newtheorem{invariant}{Invariant}
 \makeatother
 
