--- a/NonConditional/Preconditions.tex
+++ b/NonConditional/Preconditions.tex
@@ -53,7 +53,7 @@ In the following we will analyse how the aforementioned predicate sets can be de
         P_{\texttt{move-h}}^- &= \emptyset
     \end{align*}
 
-    As can be seen, there is only one applicaple \texttt{move-h} action in state $s_0$, namely $\texttt{move-h}(t_3,t_4)$. As the agent is unaware of this fact, it may apply other $\texttt{move-h}$ actions, which will all fail. The only information available to it is that both the positive and negative preconditions are subsets of $\mathbb{P}_{\texttt{move-h}}$, since no other predicate can be a precondition due to the scoping rule.
+    As can be seen, there is only one applicable \texttt{move-h} action in state $s_0$, namely $\texttt{move-h}(t_3,t_4)$. As the agent is unaware of this fact, it may apply other $\texttt{move-h}$ actions, which will all fail. The only information available to it is that both the positive and negative preconditions are subsets of $\mathbb{P}_{\texttt{move-h}}$, since no other predicate can be a precondition due to the scoping rule.
 
     \begin{equation*}
     \mathbb{P}_{\texttt{move-h}} =
